# universal-vehicle-telemetry-v1.0

./: .gitignore  CMakeLists.txt  README.md  docker-compose.yml
backend/: CMakeLists.txt  Dockerfile  main.cpp
frontend/: CMakeLists.txt  main.cpp  main.qml
simulator/: Dockerfile  sim.py
